--- a/bbs-font/package.json
+++ b/bbs-font/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.9.2",
+    "antd": "^3.10.9",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.9.1",
+    "merge": "^1.2.1",
     "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
