--- a/bbs-backend/src/main/resources/application.properties
+++ b/bbs-backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bbs
+spring.datasource.url=jdbc:mysql://localhost:3306/bbs?serverTimezone=GMT%2B8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
